filter returns accommodations with the rating