@@ -3,6 +3,7 @@ package com.booking.controller;
 import com.booking.domain.Accommodation;
 import com.booking.dto.*;
 import com.booking.service.AccommodationService;
+import com.booking.service.ReviewService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -25,11 +26,15 @@ import java.util.stream.Collectors;
 )
 public class AccommodationController {
     private AccommodationService accommodationService;
+    private ReviewService reviewService;
 
     @Autowired
-    public AccommodationController(AccommodationService service) {
+    public AccommodationController(AccommodationService service, ReviewService review) {
         this.accommodationService = service;
+        this.reviewService = review;
     }
+
+
 
     @GetMapping(
             produces = MediaType.APPLICATION_JSON_VALUE
@@ -99,7 +104,7 @@ public class AccommodationController {
             path = "/accommodationSearch",
             produces = MediaType.APPLICATION_JSON_VALUE
     )
-    public ResponseEntity<Collection<AccommodationDTO>> searchAccommodation(
+    public ResponseEntity<Collection<AccommodationFilterDTO>> searchAccommodation(
             @RequestParam(required = true) String location,
             @RequestParam(required = false) LocalDate start,
             @RequestParam(required = false) LocalDate end,
@@ -111,8 +116,13 @@ public class AccommodationController {
                     (start.isAfter(availableRange.get(0)) || start.isEqual(availableRange.get(0))) && (end.isBefore(availableRange.get(1)) || end.isEqual(availableRange.get(1)))
                 )).collect(Collectors.toList());
         }
-        Collection<AccommodationDTO> searchedAccommodations = accs.stream().map(AccommodationDTO::fromAccommodation).collect(Collectors.toList());
-        return new ResponseEntity<Collection<AccommodationDTO>>(searchedAccommodations, HttpStatus.OK);
+        Collection<AccommodationFilterDTO> filterDTOS =
+                accs
+                .stream()
+                .map(a -> AccommodationFilterDTO.fromAccommodation(a, this.reviewService.accommodationRating(a.getID())))
+                .toList();
+
+        return new ResponseEntity<Collection<AccommodationFilterDTO>>(filterDTOS, HttpStatus.OK);
     }
 
     @PutMapping(
